agregado de img

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -42,28 +42,27 @@
     </header>
 
 
-    <main class="container row margin-section">
-      <section id="contact" class="col col-sm-10">
-         <div class="row sm-10"><h2>
+    <main class="container-fluid">
+      <section id="contact" class=" margin-section col col-sm-6">
+        <h2>
           Let's work together!<br />
           Contact me at...
-           </h2>
-           <p>Send a message, I'll get back to ye as soon as possible</p>
-         </div>
-        <form id="contactbox" class="row justify-content-start p-4 ">
-          <div id="inputs" class="row col-sm-lg-10 justify-content-space-around">
-            <div class="col col-sm-4">
+        </h2>
+        <p>Send a message, I'll get back to ye as soon as possible</p>
+        <form class="contactbox">
+          <div class="form-top">
+            <div class="input">
               <label for="name"> <p>NAME</p></label>
               <input type="text" id="name"/> 
            </div>
-           <div class="col col-sm-4">
-            <label for="email"><p>EMAIL</p></label> 
-            <input type="email" id="email"/>
+           <div class="input">
+             <label for="email"><p>EMAIL</p></label> 
+             <input type="email" id="email"/>
            </div>
           </div>
-          <div class="row mb-4 mt-4">
+          <div class="form-bottom">
             <label for="message"><p>MESSAGE</p></label>
-            <textarea name="" id="message" cols="30" rows="15"></textarea>
+            <textarea name="" id="message" cols="50" rows="15"></textarea>
           </div>
           <button type="submit" id="submit">
             <h6>SUBMIT</h6>
@@ -84,14 +83,19 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-               <a class="nav-link" href="https://www.linkedin.com/in/agustina-cortes1129/"
-               target="_blank">LinkedIn</a>
-              </li >
-              <li class="nav-item">
-                <a class="nav-link" href="https://www.behance.net/agustinacorts1" target="_blank">Behance</a>
+                <a class="nav-link"
+                  href="https://www.linkedin.com/in/agustina-cortes1129/"
+                  target="_blank">LinkedIn</a>
               </li>
               <li class="nav-item">
-               <a class="nav-link" href="https://vimeo.com/agustinacortes" target="_blank">Vimeo</a>
+                <a class="nav-link"
+                  href="https://www.behance.net/agustinacorts1"
+                  target="_blank">Behance</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link"
+                  href="https://vimeo.com/agustinacortes"
+                  target="_blank">Vimeo</a>
               </li>
             </ul>
           </div>
