--- a/pages/trinkets.html
+++ b/pages/trinkets.html
@@ -39,14 +39,39 @@
           </div>
         </div>
       </nav>
+      <section class="headline ms-5 mt-5">
+            
+        This week's trinkets
+    
+        <h5>Every week I gather miscellaneous stuff for you to enjoy</h5>
+
+      </section>
 
     </header>
 
-    <main class="margin-section">
-        <section id="headline">
-            <h2>
-                This week's trinkets
-            </h2>
+    <main >
+        <section class="margin-section">
+          <div  class="carousel slide">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="/images/" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="..." class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="..." class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
         </section>
     </main>
 
@@ -60,14 +85,28 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-               <a class="nav-link" href="https://www.linkedin.com/in/agustina-cortes1129/"
-               target="_blank">LinkedIn</a>
-              </li >
-              <li class="nav-item">
-                <a class="nav-link" href="https://www.behance.net/agustinacorts1" target="_blank">Behance</a>
+                <a
+                  class="nav-link"
+                  href="https://www.linkedin.com/in/agustina-cortes1129/"
+                  target="_blank"
+                  >LinkedIn</a
+                >
               </li>
               <li class="nav-item">
-               <a class="nav-link" href="https://vimeo.com/agustinacortes" target="_blank">Vimeo</a>
+                <a
+                  class="nav-link"
+                  href="https://www.behance.net/agustinacorts1"
+                  target="_blank"
+                  >Behance</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link"
+                  href="https://vimeo.com/agustinacortes"
+                  target="_blank"
+                  >Vimeo</a
+                >
               </li>
             </ul>
           </div>
