--- a/index.html
+++ b/index.html
@@ -39,18 +39,21 @@
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="index.html"
-                  >Work</a>
+                  >Work</a
+                >
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./pages/aboutme.html">About Me</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./pages/trinkets.html"
-                  >Weekly Trinkets</a>
+                  >Weekly Trinkets</a
+                >
               </li>
               <li class="nav-item">
                 <a class="nav-linkbtn" href="./pages/contact.html"
-                  ><button class="contact-btn">Contact</button></a>
+                  ><button class="contact-btn">Contact</button></a
+                >
               </li>
             </ul>
           </div>
@@ -63,9 +66,9 @@
           <h5>
             Hiya! I'm Agustina a multimedia designer based in Buenos Aires.
           </h5>
-          <h1 class="h1">
-            From visual storytelling to <em>intuitive</em>
-            <br/>
+          <h1 class="headline">
+            From visual storytelling to <em>intuitive </em>
+            <br />
             design.
           </h1>
           <button class="arrow-btn">
@@ -83,16 +86,19 @@
       <!--Proyectos/cards-->
       <section
         id="projects"
-        class="container row m-auto d-flex justify-content-center">
+        class="container row m-auto d-flex justify-content-center"
+      >
         <div id="card" class="col col-sm-12 col-lg-6 align-items-center">
           <img
             width="65%"
             src="./images/portadaproject1.png"
             alt="project1"
-            title="Sunstar Cinemas"/>
+            title="Sunstar Cinemas"
+          />
           <div>
             <a class="card-link" href="./pages/project.html">
-            <h3>Sunstar Cinemas</h3> </a>
+              <h3>Sunstar Cinemas</h3>
+            </a>
             <p>UX/UI</p>
           </div>
         </div>
@@ -100,7 +106,8 @@
           <img
             src="./images/portadaproject2.png"
             alt="project2"
-            title="Homecheck App"/>
+            title="Homecheck App"
+          />
           <div class="card-link">
             <h3>Homecheck App</h3>
             <p>UX/UI</p>
@@ -110,7 +117,8 @@
           <img
             src="./images/portadaproject2.png"
             alt="project2"
-            title="Homecheck App"/>
+            title="Homecheck App"
+          />
           <div class="card-link">
             <h3>Homecheck App</h3>
             <p>UX/UI</p>
@@ -121,10 +129,12 @@
             width="65%"
             src="./images/portadaproject1.png"
             alt="project1"
-            title="Sunstar Cinemas"/>
+            title="Sunstar Cinemas"
+          />
           <div>
             <a class="card-link" href="./pages/project.html">
-            <h3>Sunstar Cinemas</h3></a>
+              <h3>Sunstar Cinemas</h3></a
+            >
             <p>UX/UI</p>
           </div>
         </div>
@@ -132,8 +142,20 @@
 
       <!--Certificates-->
       <section class="margin-section">
-        <div id="certificates" 
-          class="container row m-auto d-flex justify-content-space-around align-items-center">
+        <div
+          id="certificates"
+          class="container row m-auto d-flex justify-content-space-around align-items-center"
+        >
+          <article id="summary" class="col col-sm-12 col-md-5">
+            <h2 class="mb-4">My journey in Digital Design</h2>
+            <p>
+              With a background in audiovisual production and my journey in
+              graphic and UX/UI design, I bring a unique blend of storytelling
+              and user-centered design to every project.<br />
+              My ongoing studies in web development further enhance my ability
+              to create seamless and engaging digital experiences.
+            </p>
+          </article>
           <section id="certificates" class="col col-sm-12 col-md-6">
             <div class="row m-auto">
               <div id="courses" class="col col-sm-12 col-md-6">
@@ -162,16 +184,6 @@
               </div>
             </div>
           </section>
-          <article id="summary" class="col col-sm-12 col-md-5">
-            <h2 class="mb-4">My journey in Digital Design</h2>
-            <p>
-              With a background in audiovisual production and my journey in
-              graphic and UX/UI design, I bring a unique blend of storytelling
-              and user-centered design to every project.<br />
-              My ongoing studies in web development further enhance my ability
-              to create seamless and engaging digital experiences.
-            </p>
-          </article>
         </div>
       </section>
       <!--Pie-->
@@ -186,43 +198,49 @@
       <nav class="navbar navbar-expand-lg">
         <div class="container">
           <h6>@Copyright 2024</h6>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link"
+                <a
+                  class="nav-link"
                   href="https://www.linkedin.com/in/agustina-cortes1129/"
-                  target="_blank">LinkedIn</a>
+                  target="_blank"
+                  >LinkedIn</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link"
+                <a
+                  class="nav-link"
                   href="https://www.behance.net/agustinacorts1"
-                  target="_blank">Behance</a>
+                  target="_blank"
+                  >Behance</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link"
+                <a
+                  class="nav-link"
                   href="https://vimeo.com/agustinacortes"
-                  target="_blank">Vimeo</a>
+                  target="_blank"
+                  >Vimeo</a
+                >
               </li>
             </ul>
           </div>
         </div>
       </nav>
-      <a href="./pages/contact.html"><button class="float"><h5>Have any questions?</h5></button></a>
+      <a href="./pages/contact.html"
+        ><button class="float"><h5>Have any questions?</h5></button></a
+      >
     </footer>
 
     <!--link bootstrap js-->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
