--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -61,14 +61,19 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-               <a class="nav-link" href="https://www.linkedin.com/in/agustina-cortes1129/"
-               target="_blank">LinkedIn</a>
-              </li >
-              <li class="nav-item">
-                <a class="nav-link" href="https://www.behance.net/agustinacorts1" target="_blank">Behance</a>
+                <a class="nav-link"
+                  href="https://www.linkedin.com/in/agustina-cortes1129/"
+                  target="_blank">LinkedIn</a>
               </li>
               <li class="nav-item">
-               <a class="nav-link" href="https://vimeo.com/agustinacortes" target="_blank">Vimeo</a>
+                <a class="nav-link"
+                  href="https://www.behance.net/agustinacorts1"
+                  target="_blank">Behance</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link"
+                  href="https://vimeo.com/agustinacortes"
+                  target="_blank">Vimeo</a>
               </li>
             </ul>
           </div>
