--- a/pages/project.html
+++ b/pages/project.html
@@ -62,46 +62,31 @@
         <h2>Sunstar Cinemas</h2>
       </section>
     </main>
+
+    
     <footer>
       <nav class="navbar navbar-expand-lg">
         <div class="container">
           <h6>@Copyright 2024</h6>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a
-                  class="nav-link"
+                <a class="nav-link"
                   href="https://www.linkedin.com/in/agustina-cortes1129/"
-                  target="_blank"
-                  >LinkedIn</a
-                >
+                  target="_blank">LinkedIn</a>
               </li>
               <li class="nav-item">
-                <a
-                  class="nav-link"
+                <a class="nav-link"
                   href="https://www.behance.net/agustinacorts1"
-                  target="_blank"
-                  >Behance</a
-                >
+                  target="_blank">Behance</a>
               </li>
               <li class="nav-item">
-                <a
-                  class="nav-link"
+                <a class="nav-link"
                   href="https://vimeo.com/agustinacortes"
-                  target="_blank"
-                  >Vimeo</a
-                >
+                  target="_blank">Vimeo</a>
               </li>
             </ul>
           </div>
