--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
           <a class="navbar-brand" href="./index.html">
-            <img src="./images/logoac.png" alt="Portfolio" width="130" />
+            <img src="./images/logoac.png" alt="Portfolio" width="150" />
           </a>
           <button
             class="navbar-toggler"
@@ -115,27 +115,25 @@
         </div>
         <div id="card" class="col col-sm-12 col-lg-4">
           <img
-            src="./images/portadaproject2.png"
-            alt="project2"
-            title="Homecheck App"
+            src="./images/luke.png"
+            alt="project3"
+            title="Luke's Iced coffee"
           />
           <div class="card-link">
-            <h3>Homecheck App</h3>
-            <p>UX/UI</p>
+            <h3>Luke's Iced Coffee Web</h3>
+            <p>UI Motion</p>
           </div>
         </div>
         <div id="card" class="col col-sm-12 col-lg-6 align-items-center">
           <img
             width="65%"
-            src="./images/portadaproject1.png"
-            alt="project1"
-            title="Sunstar Cinemas"
+            src="./images/mugsy.png"
+            alt="project4"
+            title="mugsy"
           />
-          <div>
-            <a class="card-link" href="./pages/project.html">
-              <h3>Sunstar Cinemas</h3></a
-            >
-            <p>UX/UI</p>
+          <div class="card-link">
+              <h3>Mugsy Ceramics</h3>
+            <p>Branding</p>
           </div>
         </div>
       </section>
@@ -232,7 +230,7 @@
         </div>
       </nav>
       <a href="./pages/contact.html"
-        ><button class="float"><h5>Have any questions?</h5></button></a
+        ><button class="float"><h3>Have any questions?</h3></button></a
       >
     </footer>
 
