--- a/pages/contact.html
+++ b/pages/contact.html
@@ -16,7 +16,7 @@
       <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
           <a class="navbar-brand" href="/index.html">
-            <img src="/images/logoac.png" alt="Portfolio" width="130">
+            <img src="/images/logoac.png" alt="Portfolio" width="150">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -39,16 +39,20 @@
           </div>
         </div>
       </nav>
+      <section class="headline ms-5 mt-5">
+            
+        Let's work together!<br />
+        Contact me at...
+    
+        <h5>Send a message, I'll get back to ye as soon as possible</h5>
+
+      </section>
     </header>
 
 
-    <main class="container-fluid">
+    <main class="container">
       <section id="contact" class=" margin-section col col-sm-6">
-        <h2>
-          Let's work together!<br />
-          Contact me at...
-        </h2>
-        <p>Send a message, I'll get back to ye as soon as possible</p>
+
         <form class="contactbox">
           <div class="form-top">
             <div class="input">
