--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       </section>
     </header>
 
-    <main class="margin-section">
+    <main >
       <div class="container text-center mb-5">
         <h2>Work</h2>
       </div>
@@ -86,11 +86,11 @@
       <!--Proyectos/cards-->
       <section
         id="projects"
-        class="container row m-auto d-flex justify-content-center"
+        class="container row m-auto d-flex justify-content-center
+        align-items-strech"
       >
-        <div id="card" class="col col-sm-12 col-lg-6 align-items-center">
+        <div id="card" class="col col-sm-12 col-lg-6">
           <img
-            width="65%"
             src="./images/portadaproject1.png"
             alt="project1"
             title="Sunstar Cinemas"
@@ -124,15 +124,10 @@
             <p>UI Motion</p>
           </div>
         </div>
-        <div id="card" class="col col-sm-12 col-lg-6 align-items-center">
-          <img
-            width="65%"
-            src="./images/mugsy.png"
-            alt="project4"
-            title="mugsy"
-          />
+        <div id="card" class="col col-sm-12 col-lg-6 ">
+          <img src="./images/mugsy.png" alt="project4" title="mugsy" />
           <div class="card-link">
-              <h3>Mugsy Ceramics</h3>
+            <h3>Mugsy Ceramics</h3>
             <p>Branding</p>
           </div>
         </div>
@@ -185,18 +180,23 @@
         </div>
       </section>
       <!--Pie-->
-      <section>
-        
-      </section>
+      <section></section>
     </main>
 
     <footer>
-
       <!--bottom-->
       <nav class="navbar navbar-expand-lg">
         <div class="container">
           <h6>@Copyright 2024</h6>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
