--- a/pages/trinkets.html
+++ b/pages/trinkets.html
@@ -78,7 +78,7 @@
                 <div class="carousel-caption d-none d-md-block w-20">
                   <h5>Level up your motion skills</h5>
                   <p>The site aims to show how these techniques enhance user experience, making interfaces more engaging and interactive.
-                  Visit the website</p> <a class="nav-linkbtn" href="https://motion.zajno.com/" target="_blank">Motion.zajno.com</a></div>
+                  Visit the website</p> <a class="carousel-link" href="https://motion.zajno.com/" target="_blank"><h6>motion.zajno.com</h6></a></div>
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carousel-trinket" data-bs-slide="prev">
