--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AgustinaCortesPortfolio</title>
-    <link rel="stylesheet" href="./styles/styles.css" />
-    <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon" />
+    <link rel="stylesheet" href="/styles/styles.css" />
+    <link rel="shortcut icon" href="/images/favicon.png" type="image/x-icon" />
 
     <!--link bootstrap css-->
     <link
@@ -43,15 +43,15 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./pages/aboutme.html">About Me</a>
+                <a class="nav-link" href="/pages/aboutme.html">About Me</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./pages/trinkets.html"
+                <a class="nav-link" href="/pages/trinkets.html"
                   >Weekly Trinkets</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-linkbtn" href="./pages/contact.html"
+                <a class="nav-linkbtn" href="/pages/contact.html"
                   ><button class="contact-btn">Contact</button></a
                 >
               </li>
