--- a/pages/trinkets.html
+++ b/pages/trinkets.html
@@ -27,13 +27,13 @@
                 <a class="nav-link"  href="/index.html">Work</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/pages/aboutme.html">About Me</a>
+                <a class="nav-link" href="./aboutme.html">About Me</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/pages/trinkets.html">Weekly Trinkets</a>
+                <a class="nav-link active" aria-current="page" href="./trinkets.html">Weekly Trinkets</a>
               </li>
               <li class="nav-item">
-                <a class="nav-linkbtn" href="/pages/contact.html"><button class="contact-btn">Contact</button></a>
+                <a class="nav-linkbtn" href="./contact.html"><button class="contact-btn">Contact</button></a>
               </li>
             </ul>
           </div>
