--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -28,13 +28,13 @@
                 <a class="nav-link"  href="/index.html">Work</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/pages/aboutme.html">About Me</a>
+                <a class="nav-link active" aria-current="page" href="./aboutme.html">About Me</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/pages/trinkets.html">Weekly Trinkets</a>
+                <a class="nav-link" href="./trinkets.html">Weekly Trinkets</a>
               </li>
               <li class="nav-item">
-                <a class="nav-linkbtn"   href="/pages/contact.html"><button class="contact-btn">Contact</button></a>
+                <a class="nav-linkbtn"   href="./contact.html"><button class="contact-btn">Contact</button></a>
               </li>
             </ul>
           </div>
@@ -100,7 +100,7 @@
           </div>
         </div>
       </nav>
-      <a href="./pages/contact.html"><button class="float"><h3>Have any questions?</h3></button></a>
+      <a href="./contact.html"><button class="float"><h3>Have any questions?</h3></button></a>
       </footer>
       
         <!--link bootstrap js-->
