--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AgustinaCortes</title>
+    <title>AgustinaCortesPortfolio</title>
     <link rel="stylesheet" href="/styles/styles.css" />
     <link rel="shortcut icon" href="/images/favicon3.png" type="image/x-icon" />
 
@@ -27,13 +27,13 @@
                 <a class="nav-link"  href="/index.html">Work</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/pages/aboutme.html">About Me</a>
+                <a class="nav-link" href="./aboutme.html">About Me</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/pages/trinkets.html">Weekly Trinkets</a>
+                <a class="nav-link" href="./trinkets.html">Weekly Trinkets</a>
               </li>
               <li class="nav-item">
-                <a class="nav-linkbtn  active" aria-current="page" href="/pages/contact.html"><button class="contact-btn">Contact</button></a>
+                <a class="nav-linkbtn  active" aria-current="page" href="./contact.html"><button class="contact-btn">Contact</button></a>
               </li>
             </ul>
           </div>
