--- a/pages/project.html
+++ b/pages/project.html
@@ -39,10 +39,10 @@
                 <a class="nav-link" href="/index.html">Work</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/pages/aboutme.html">About Me</a>
+                <a class="nav-link" href="./aboutme.html">About Me</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/pages/trinkets.html"
+                <a class="nav-link" href="./trinkets.html"
                   >Weekly Trinkets</a
                 >
               </li>
@@ -100,7 +100,7 @@
           </div>
         </div>
       </nav>
-      <a href="/pages/contact.html"
+      <a href="./contact.html"
         ><button class="float"><h3>Have any questions?</h3></button></a
       >
     </footer>
