--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       <!--NavBar-->
       <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-          <a class="navbar-brand" href="./index.html">
-            <img src="./images/logoac.png" alt="Portfolio" width="150" />
+          <a class="navbar-brand" href="/index.html">
+            <img src="/images/logoac.png" alt="Portfolio" width="150" />
           </a>
           <button
             class="navbar-toggler"
@@ -46,7 +46,7 @@
                 <a class="nav-link" href="/pages/aboutme.html">About Me</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/pages/trinkets.html"
+                <a class="nav-link" href="./pages/trinkets.html"
                   >Weekly Trinkets</a
                 >
               </li>
