--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AgustinaCortesPortfolio</title>
-    <link rel="stylesheet" href="/styles/styles.css" />
-    <link rel="shortcut icon" href="/images/favicon.png" type="image/x-icon" />
+    <link rel="stylesheet" href="./styles/styles.css" />
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon" />
 
     <!--link bootstrap css-->
     <link
@@ -21,8 +21,8 @@
       <!--NavBar-->
       <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/index.html">
-            <img src="/images/logoac.png" alt="Portfolio" width="150" />
+          <a class="navbar-brand" href="./index.html">
+            <img src="./images/logoac.png" alt="Portfolio" width="150" />
           </a>
           <button
             class="navbar-toggler"
@@ -43,7 +43,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/pages/aboutme.html">About Me</a>
+                <a class="nav-link" href="./pages/aboutme.html">About Me</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./pages/trinkets.html"
@@ -51,7 +51,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-linkbtn" href="/pages/contact.html"
+                <a class="nav-linkbtn" href="./pages/contact.html"
                   ><button class="contact-btn">Contact</button></a
                 >
               </li>
