--- a/pages/project.html
+++ b/pages/project.html
@@ -20,7 +20,7 @@
       <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
           <a class="navbar-brand" href="/index.html">
-            <img src="/images/logoac.png" alt="Portfolio" width="150" />
+            <img src="/images/logoac.png" alt="logo" width="150" />
           </a>
           <button
             class="navbar-toggler"
