--- a/pages/trinkets.html
+++ b/pages/trinkets.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AgustinaCortesPortfolio</title>
     <link rel="stylesheet" href="./styles/styles.css">
-    <link rel="shortcut icon" href="images/favicon2.png" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon2.png" type="image/x-icon">
 
       <!--link bootstrap css-->
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -15,8 +15,8 @@
     <header>
       <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-          <a class="navbar-brand" href="./index.html">
-            <img src="./images/logoac.png" alt="Portfolio" width="150">
+          <a class="navbar-brand" href="/index.html">
+            <img src="logoac.png" alt="logo" width="150">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -24,7 +24,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link"  href="index.html">Work</a>
+                <a class="nav-link"  href="/index.html">Work</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="aboutme.html">About Me</a>
@@ -60,21 +60,21 @@
          
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="images/slider1.png" class="d-block w-100" alt="motion">
+                <img src="slider1.png" class="d-block w-100" alt="motion">
                 <div class="carousel-caption d-none d-md-block w-20">
                   <h5>This is Motion.zajno.com</h5>
                   <p>The website explores the principles of motion design and animation, focusing on UI/UX applications.</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="images/slider2.png" class="d-block w-100" alt="motion">
+                <img src="slider2.png" class="d-block w-100" alt="motion">
                 <div class="carousel-caption d-none d-md-block w-20">
                   <h5>Explore the motion</h5>
                   <p>It provides detailed examples and explanations of techniques like easing, offset, delay, fade-in, fade-out, transformation, masking, dimension, parallax, and zoom.</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="images/slider3.png" class="d-block w-100" alt="motion">
+                <img src="slider3.png" class="d-block w-100" alt="motion">
                 <div class="carousel-caption d-none d-md-block w-20">
                   <h5>Level up your motion skills</h5>
                   <p>The site aims to show how these techniques enhance user experience, making interfaces more engaging and interactive.
