--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       >
         <div id="card" class="col col-sm-12 col-lg-6">
           <img
-            src="./images/portadaproject1.png"
+            src="images/portadaproject1.png"
             alt="project1"
             title="Sunstar Cinemas"
           />
