--- a/pages/trinkets.html
+++ b/pages/trinkets.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AgustinaCortesPortfolio</title>
-    <link rel="stylesheet" href="https://github.com/Agusdesign/AgustinaPortfolio/tree/main/styles/styles.css">
-    <link rel="shortcut icon" href="images/favicon2.png" type="image/x-icon">
+    <link rel="stylesheet" href="/./styles/styles.css">
+    <link rel="shortcut icon" href="/./images/favicon2.png" type="image/x-icon">
 
       <!--link bootstrap css-->
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
