--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AgustinaCortesPortfolio</title>
-    <link rel="stylesheet" href="/styles/styles.css">
-    <link rel="shortcut icon" href="/images/favicon1.png" type="image/x-icon">
+    <link rel="stylesheet" href="../styles/styles.css">
+    <link rel="shortcut icon" href="../images/favicon1.png" type="image/x-icon">
       <!--link bootstrap css-->
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     
@@ -16,8 +16,8 @@
     <header>
       <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/index.html">
-            <img src="/images/logoac.png" alt="logo" width="150">
+          <a class="navbar-brand" href="../index.html">
+            <img src="../images/logoac.png" alt="logo" width="150">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -25,16 +25,16 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link"  href="/index.html">Work</a>
+                <a class="nav-link"  href="../index.html">Work</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./aboutme.html">About Me</a>
+                <a class="nav-link active" aria-current="page" href="aboutme.html">About Me</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./trinkets.html">Weekly Trinkets</a>
+                <a class="nav-link" href="trinkets.html">Weekly Trinkets</a>
               </li>
               <li class="nav-item">
-                <a class="nav-linkbtn"   href="./contact.html"><button class="contact-btn">Contact</button></a>
+                <a class="nav-linkbtn"   href="contact.html"><button class="contact-btn">Contact</button></a>
               </li>
             </ul>
           </div>
@@ -56,10 +56,10 @@
           <h2>Experience</h2>
           <p>I am a versatile professional passionate about visual storytelling and with diverse experience in digital design: UX/UI, Web, branding, audiovisual.As a video editor I was able to expand my skills and delve into the complexities of video production, developing a strong sense of teamwork and project management. <br> I have recently embarked on a new adventure in visual design. I have made the decision to start self-taught in the world of graphic design and UX/UI design. With my experience in audiovisual media production and post-production and now my growing mastery of digital design, I am prepared to contribute to projects that require a combination of creativity, technical acumen and a global perspective.</p>
           </article>
-          <img id="profile" class="col col-lg-5 col-sm-md-10" src="/images/aboutme.png" alt="profilpic" width="50%">
+          <img id="profile" class="col col-lg-5 col-sm-md-10" src="../images/aboutme.png" alt="profilpic" width="50%">
         </div>
         <div id="Interests" class="row mt-5">
-          <img  class="col-sm-md-10 col-lg-6" src="/images/giffabout.gif" alt="gif">
+          <img  class="col-sm-md-10 col-lg-6" src="../images/giffabout.gif" alt="gif">
           <article class=" col-sm-md-10 col-lg-6 ">
            <h2>Interests</h2>
           <p>
@@ -100,7 +100,7 @@
           </div>
         </div>
       </nav>
-      <a href="./contact.html"><button class="float"><h3>Have any questions?</h3></button></a>
+      <a href="contact.html"><button class="float"><h3>Have any questions?</h3></button></a>
       </footer>
       
         <!--link bootstrap js-->
