--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AgustinaCortesPortfolio</title>
-    <link rel="stylesheet" href="/styles/styles.css" />
-    <link rel="shortcut icon" href="/images/favicon3.png" type="image/x-icon" />
+    <link rel="stylesheet" href="../styles/styles.css" />
+    <link rel="shortcut icon" href="../images/favicon3.png" type="image/x-icon" />
 
       <!--link bootstrap css-->
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -15,8 +15,8 @@
     <header>
       <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/index.html">
-            <img src="/images/logoac.png" alt="logo" width="150">
+          <a class="navbar-brand" href="../index.html">
+            <img src="../images/logoac.png" alt="logo" width="150">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -24,16 +24,16 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link"  href="/index.html">Work</a>
+                <a class="nav-link"  href="../index.html">Work</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./aboutme.html">About Me</a>
+                <a class="nav-link" href="aboutme.html">About Me</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./trinkets.html">Weekly Trinkets</a>
+                <a class="nav-link" href="trinkets.html">Weekly Trinkets</a>
               </li>
               <li class="nav-item">
-                <a class="nav-linkbtn  active" aria-current="page" href="./contact.html"><button class="contact-btn">Contact</button></a>
+                <a class="nav-linkbtn  active" aria-current="page" href="contact.html"><button class="contact-btn">Contact</button></a>
               </li>
             </ul>
           </div>
