--- a/pages/project.html
+++ b/pages/project.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AgustinaCortesPortfolio</title>
-    <link rel="stylesheet" href="/styles/styles.css" />
-    <link rel="shortcut icon" href="/images/favicon.png" type="image/x-icon" />
+    <link rel="stylesheet" href="../styles/styles.css" />
+    <link rel="shortcut icon" href="../images/favicon.png" type="image/x-icon" />
 
     <!--link bootstrap css-->
     <link
@@ -19,8 +19,8 @@
     <header>
       <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/index.html">
-            <img src="/images/logoac.png" alt="logo" width="150" />
+          <a class="navbar-brand" href="../index.html">
+            <img src="../images/logoac.png" alt="logo" width="150" />
           </a>
           <button
             class="navbar-toggler"
@@ -36,18 +36,18 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link" href="/index.html">Work</a>
+                <a class="nav-link" href="../index.html">Work</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./aboutme.html">About Me</a>
+                <a class="nav-link" href="aboutme.html">About Me</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./trinkets.html"
+                <a class="nav-link" href="trinkets.html"
                   >Weekly Trinkets</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-linkbtn" href="/pages/contact.html"
+                <a class="nav-linkbtn" href="contact.html"
                   ><button class="contact-btn">Contact</button></a
                 >
               </li>
@@ -100,7 +100,7 @@
           </div>
         </div>
       </nav>
-      <a href="./contact.html"
+      <a href="contact.html"
         ><button class="float"><h3>Have any questions?</h3></button></a
       >
     </footer>
