--- a/pages/project.html
+++ b/pages/project.html
@@ -64,9 +64,82 @@
 
     <main class="container">
       <section class="margin-section">
-        <article>
+        <div class="accordion" id="accordionSunstar">
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                Why redesigning?
+              </button>
+            </h2>
+            <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionSunstar">
+              <div class="accordion-body">
+                <strong>Cinemasunstar.com</strong> is the official website of the Sunstar cinema chain in Argentina. The site serves to inform you of the locations of its branches, presents the catalog of its billboard and schedules, in addition to the possibility of purchasing tickets and possible information on promotional opportunities.
+                <div>
+                  <img src="../images/proyactosuns_1.png" alt="mockup">
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                Research and Ideation
+              </button>
+            </h2>
+            <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionSunstar">
+              <div class="accordion-body">
+                <strong>Nielsen heuristic principles </strong> were used to evaluate the usability of the cinesunstar.com site to identify potential user issues and design a more intuitive interface. 
 
-        </article>
+                Regular and irregular customers of various movie theaters were interviewed via video calls to gather insights on user experiences both at Sunstar and competing sites. 
+                
+                The methodology allowed for flexible questioning, and the collected data, along with benchmarking and trend analysis, helped define two user archetypes based on their movie-going habits, interests, and expectations for the user experience. Other analysis tools used were a User's journey map and a Lean UX canvas.
+              </div>
+              <div class="accordion-body">
+                <strong>For this project I carried out two tree-testing,</strong>  one with the current architecture of the site and another with the IA that I proposed based on the user-testing conducted previously. Then I devised a matrix prioritizing ideas that favor user desirability and business viability.
+ 
+                Finally, I outlined the main task flows to be optimize, with the corresponding wireframes.
+              </div>
+              <div>
+                <img src="../images/proyactosuns_2.png" alt="wireframes">
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                Design, Copy and Prototyping
+              </button>
+            </h2>
+            <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionSunstar">
+              <div class="accordion-body">
+                <strong>Voice and Visuals</strong> I outlined the company's purposes and fundamental values. Following the golden circle rule (why?- how? what?). The brand tone and voice map and copywriting guide. I wanted both the site's appearance and copywriting to represent the ideals of emotion, enthusiasm, and connection.
+
+                I develop the design system and visual style guide. including grids and spacing, use of typography and imagery elements, component styles and motion UI.
+              </div>
+              <div class="accordion-body">
+                From there I developed the functional prototype in Figma suitable for being tested by users, the results were subjected to data and metrics analysis, from which I managed to distinguish opportunities for improvement and produced a new iteration of the product.
+              </div>
+              <div>
+                <img src="../images/proyactosuns_3.png" alt="moodboard">
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                Conclusions
+              </button>
+            </h2>
+            <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionSunstar">
+              <div class="accordion-body">
+                <strong>Based on the findings,</strong>  most issues are related to visual accessibility. The most urgent task is to improve the location and visibility of problematic elements to enhance the user experience.
+              </div>
+              <div class="accordion-body">
+                Website redesign is an ongoing process. Regular user feedback should be collected to continually iterate and optimize the design and functionality.
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
       
     </main>
