--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AgustinaCortesPortfolio</title>
-    <link rel="stylesheet" href="./styles/styles.css" />
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon" />
-
     <!--link bootstrap css-->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -14,6 +12,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="./styles/main.css" />
   </head>
 
   <body>
@@ -51,9 +50,9 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-linkbtn" href="./pages/contact.html"
-                  ><button class="contact-btn">Contact</button></a
-                >
+                <a class="nav-linkbtn" href="./pages/contact.html">
+                  <button class="contact-btn">Contact</button>
+                  </a>
               </li>
             </ul>
           </div>
@@ -63,9 +62,9 @@
       <!--Hero-->
       <section class="hero d-flex justify-content-center align-items-center">
         <div>
-          <h5>
+          <h3>
             Hiya! I'm Agustina a multimedia designer based in Buenos Aires.
-          </h5>
+          </h3>
           <h1 class="headline">
             From visual storytelling to <em>intuitive </em>
             <br />
@@ -97,9 +96,9 @@
           />
           <div>
             <a class="card-link" href="./pages/project.html">
-              <h3>Sunstar Cinemas</h3>
+              <h2>Sunstar Cinemas</h2>
             </a>
-            <p>UX/UI</p>
+            <h3>UX/UI</h3>
           </div>
         </div>
         <div id="card" class="col col-sm-12 col-lg-4">
@@ -109,8 +108,8 @@
             title="Homecheck App"
           />
           <div class="card-link">
-            <h3>Homecheck App</h3>
-            <p>UX/UI</p>
+            <h2>Homecheck App</h2>
+            <h3>UX/UI</h3>
           </div>
         </div>
         <div id="card" class="col col-sm-12 col-lg-4">
@@ -120,15 +119,15 @@
             title="Luke's Iced coffee"
           />
           <div class="card-link">
-            <h3>Luke's Iced Coffee Web</h3>
-            <p>UI Motion</p>
+            <h2>Luke's Iced Coffee Web</h2>
+            <h3>UI Motion</h3>
           </div>
         </div>
         <div id="card" class="col col-sm-12 col-lg-6 ">
           <img src="./images/mugsy.png" alt="project4" title="mugsy" />
           <div class="card-link">
-            <h3>Mugsy Ceramics</h3>
-            <p>Branding</p>
+            <h2>Mugsy Ceramics</h2>
+            <h3>Branding</h3>
           </div>
         </div>
       </section>
@@ -153,27 +152,27 @@
             <div class="row m-auto">
               <div id="courses" class="col col-sm-12 col-md-6">
                 <img src="./images/logocoder.png" alt="coderhouse" />
-                <h5>UX/UI Advd. Design</h5>
+                <h3>UX/UI Advd. Design</h3>
                 <p>Coderhouse</p>
-                <h6>2024</h6>
+                <h5>2024</h5>
               </div>
               <div id="courses" class="col col-sm-12 col-md-6">
                 <img src="./images/logoutn.png" alt="utn" />
-                <h5>Digital Graphic Design</h5>
+                <h3>Digital Graphic Design</h3>
                 <p>UTN | E-Learning Center</p>
-                <h6>2023</h6>
+                <h5>2023</h5>
               </div>
               <div id="courses" class="col col-sm-12 col-md-6">
                 <img src="./images/logocoder.png" alt="coderhouse" />
-                <h5>Web Development</h5>
+                <h3>Web Development</h3>
                 <p>Coderhouse</p>
-                <h6>2024</h6>
+                <h5>2024</h5>
               </div>
               <div id="courses" class="col col-sm-12 col-md-6">
                 <img src="./images/logocoder.png" alt="coderhouse" />
-                <h5>UX/UI Initial Design</h5>
+                <h3>UX/UI Initial Design</h3>
                 <p>Coderhouse</p>
-                <h6>2023</h6>
+                <h5>2023</h5>
               </div>
             </div>
           </section>
