--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AgustinaCortesPortfolio</title>
-    <link rel="stylesheet" href="../styles/styles.css">
+    
     <link rel="shortcut icon" href="../images/favicon1.png" type="image/x-icon">
       <!--link bootstrap css-->
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    
+      <link rel="stylesheet" href="../styles/main.css">
 </head>
 
 
@@ -51,21 +51,22 @@
 
     <main class="margin-section ms-5">
       <div class="container">
-        <div class="row mb-5">
-          <article class="col col-lg-6 col-sm-md-10 " >
+        <div class="row justify-content-center">
+          <img id="profile" class="col-lg-6 col-sm-md-10" src="../images/aboutme.png" alt="profilpic" >
+          <article class="col-lg-5 col-sm-md-10 " >
           <h2>Experience</h2>
-          <p>I am a versatile professional passionate about visual storytelling and with diverse experience in digital design: UX/UI, Web, branding, audiovisual.As a video editor I was able to expand my skills and delve into the complexities of video production, developing a strong sense of teamwork and project management. <br> I have recently embarked on a new adventure in visual design. I have made the decision to start self-taught in the world of graphic design and UX/UI design. With my experience in audiovisual media production and post-production and now my growing mastery of digital design, I am prepared to contribute to projects that require a combination of creativity, technical acumen and a global perspective.</p>
+          <p>I am a versatile professional passionate about visual storytelling and with diverse experience in digital design: UX/UI, Web, branding, audiovisual.As a video editor I was able to expand my skills and delve into the complexities of video production, developing a strong sense of teamwork and project management. <br> <br> I have recently embarked on a new adventure in visual design. I have made the decision to start self-taught in the world of graphic design and UX/UI design. With my experience in audiovisual media production and post-production and now my growing mastery of digital design, I am prepared to contribute to projects that require a combination of creativity, technical acumen and a global perspective.</p>
           </article>
-          <img id="profile" class="col col-lg-5 col-sm-md-10" src="../images/aboutme.png" alt="profilpic" width="50%">
         </div>
-        <div id="Interests" class="row mt-5">
-          <img  class="col-sm-md-10 col-lg-6" src="../images/giffabout.gif" alt="gif">
-          <article class=" col-sm-md-10 col-lg-6 ">
+
+        <div id="Interests" class="row">
+          <article class=" col-sm-md-10 col-lg-5 ">
            <h2>Interests</h2>
           <p>
-          My interests span a variety of creative and active pursuits. Photography allows me to capture and appreciate the beauty in everyday moments. I enjoy handcrafting decorative items, which lets me express my artistic side and create unique pieces. Roller skating is my favorite way to stay active and have fun, feeling the thrill of movement. Additionally, I have an absolute love for 00's movies; their nostalgic charm and iconic storytelling have a special place in my heart, reminding me of simpler times.
+          My interests span a variety of creative and active pursuits. Photography allows me to capture and appreciate the beauty in everyday moments. <br><br>I enjoy handcrafting decorative items, which lets me express my artistic side and create unique pieces. Roller skating is my favorite way to stay active and have fun, feeling the thrill of movement. Additionally, I have an absolute love for 00's movies; their nostalgic charm and iconic storytelling have a special place in my heart, reminding me of simpler times.
           </p>
          </article>
+         <img  class="col-sm-md-5 col-lg-6" src="../images/giffabout.gif" alt="gif">
         </div>
       </div>
 
