--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AgustinaCortesPortfolio</title>
-    <link rel="stylesheet" href="../styles/styles.css" />
+    
     <link rel="shortcut icon" href="../images/favicon3.png" type="image/x-icon" />
 
-      <!--link bootstrap css-->
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    
+    <!--link bootstrap css-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="../styles/main.css" />
   </head>
   <body>
     <header>
@@ -66,9 +66,9 @@
           </div>
           <div class="form-bottom">
             <label for="message"><p>MESSAGE</p></label>
-            <textarea name="" id="message" cols="50" rows="15"></textarea>
+            <textarea name="message" id="message" cols="50" rows="15"></textarea>
           </div>
-          <button type="submit" id="submit">
+          <button type="submit" class=" btn-submit">
             <h6>SUBMIT</h6>
           </button>
         </form>
