--- a/pages/project.html
+++ b/pages/project.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AgustinaCortesPortfolio</title>
-    <link rel="stylesheet" href="../styles/styles.css" />
+    
     <link rel="shortcut icon" href="../images/favicon.png" type="image/x-icon" />
-
     <!--link bootstrap css-->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -14,7 +13,10 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="../styles/main.css" />
   </head>
+
+  
   <body>
     <header>
       <nav class="navbar navbar-expand-lg">
@@ -75,7 +77,7 @@
               <div class="accordion-body">
                 <strong>Cinemasunstar.com</strong> is the official website of the Sunstar cinema chain in Argentina. The site serves to inform you of the locations of its branches, presents the catalog of its billboard and schedules, in addition to the possibility of purchasing tickets and possible information on promotional opportunities.
                 <div>
-                  <img src="../images/proyactosuns_1.png" alt="mockup">
+                  <img class="accordion-img" src="../images/proyactosuns_1.png" alt="mockup">
                 </div>
               </div>
             </div>
@@ -100,7 +102,7 @@
                 Finally, I outlined the main task flows to be optimize, with the corresponding wireframes.
               </div>
               <div>
-                <img src="../images/proyactosuns_2.png" alt="wireframes">
+                <img class="accordion-img" src="../images/proyactosuns_2.png" alt="wireframes">
               </div>
             </div>
           </div>
@@ -120,7 +122,7 @@
                 From there I developed the functional prototype in Figma suitable for being tested by users, the results were subjected to data and metrics analysis, from which I managed to distinguish opportunities for improvement and produced a new iteration of the product.
               </div>
               <div>
-                <img src="../images/proyactosuns_3.png" alt="moodboard">
+                <img class="accordion-img" src="../images/proyactosuns_3.png" alt="moodboard">
               </div>
             </div>
           </div>
