--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AgustinaCortesPortfolio</title>
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon" />
+
     <!--link bootstrap css-->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -52,7 +53,7 @@
               <li class="nav-item">
                 <a class="nav-linkbtn" href="./pages/contact.html">
                   <button class="contact-btn">Contact</button>
-                  </a>
+                </a>
               </li>
             </ul>
           </div>
@@ -77,57 +78,74 @@
       </section>
     </header>
 
-    <main >
+    <main>
       <div class="container text-center mb-5">
         <h2>Work</h2>
       </div>
 
       <!--Proyectos/cards-->
-      <section
-        id="projects"
-        class="container row m-auto d-flex justify-content-center
-        align-items-strech"
-      >
-        <div id="card" class="col col-sm-12 col-lg-6">
-          <img
-            src="images/portadaproject1.png"
-            alt="project1"
-            title="Sunstar Cinemas"
-          />
-          <div>
-            <a class="card-link" href="./pages/project.html">
-              <h2>Sunstar Cinemas</h2>
-            </a>
-            <h3>UX/UI</h3>
+      <section id="projects" class="container ">
+        <div class="row mt-5">
+          <div class="col-md-7 sm-10">
+            <div class="card h-100 d-flex flex-column justify-content-around">
+              <img
+                class="card-img-top"
+                src="images/portadaproject1.png"
+                alt="project1"
+                title="Sunstar Cinemas"
+              />
+              <div class="card-body">
+                <a class="card-link" href="./pages/project.html">
+                  <h2>Sunstar Cinemas</h2>
+                </a>
+                <h3>UX/UI</h3>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-5 sm-10">
+            <div class="card h-100 d-flex flex-column justify-content-around">
+              <img
+                class="card-img-top"
+                src="./images/portadaproject2.png"
+                alt="project2"
+                title="Homecheck App"
+              />
+              <div class="card-body">
+                <h2>Homecheck App</h2>
+                <h3>UX/UI</h3>
+              </div>
+            </div>
           </div>
         </div>
-        <div id="card" class="col col-sm-12 col-lg-4">
-          <img
-            src="./images/portadaproject2.png"
-            alt="project2"
-            title="Homecheck App"
-          />
-          <div class="card-link">
-            <h2>Homecheck App</h2>
-            <h3>UX/UI</h3>
+        <div class="row mt-4">
+          <div class="col-md-5 sm-10">
+            <div class="card h-100 d-flex flex-column justify-items-around">
+              <img
+                class="card-img-top"
+                src="./images/luke.png"
+                alt="project3"
+                title="Luke's Iced coffee"
+              />
+              <div class="card-body">
+                <h2>Luke's Iced Coffee Web</h2>
+                <h3>UI Motion</h3>
+              </div>
+            </div>
           </div>
-        </div>
-        <div id="card" class="col col-sm-12 col-lg-4">
-          <img
-            src="./images/luke.png"
-            alt="project3"
-            title="Luke's Iced coffee"
-          />
-          <div class="card-link">
-            <h2>Luke's Iced Coffee Web</h2>
-            <h3>UI Motion</h3>
-          </div>
-        </div>
-        <div id="card" class="col col-sm-12 col-lg-6 ">
-          <img src="./images/mugsy.png" alt="project4" title="mugsy" />
-          <div class="card-link">
-            <h2>Mugsy Ceramics</h2>
-            <h3>Branding</h3>
+          <div class="col-md-7 sm-10">
+            <div class="card h-100 d-flex flex-column justify-content-around">
+              >
+              <img
+                class="card-img-top"
+                src="./images/mugsy.png"
+                alt="project4"
+                title="mugsy"
+              />
+              <div class="card-body">
+                <h2>Mugsy Ceramics</h2>
+                <h3>Branding</h3>
+              </div>
+            </div>
           </div>
         </div>
       </section>
