--- a/pages/project.html
+++ b/pages/project.html
@@ -58,8 +58,7 @@
         </div>
       </nav>
       <section class="headline ms-5 mt-5">
-            
-        Sunstar Cinemas
+        <h1>Sunstar Cinemas</h1>
         <h5>UX/UI Website Case Study</h5>
       </section>
     </header>
@@ -176,7 +175,7 @@
         </div>
       </nav>
       <a href="contact.html"
-        ><button class="float"><h3>Have any questions?</h3></button></a
+        ><button class="float rounded"><h3>Have any questions?</h3></button></a
       >
     </footer>
     <!--link bootstrap js-->
