--- a/index.html
+++ b/index.html
@@ -6,14 +6,18 @@
     <title>AgustinaCortesPortfolio</title>
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon" />
 
-    <!--link bootstrap css-->
+    <!--link bootstrap-->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./styles/main.css" />
+    <!--link aos-->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!--link css-->
+    <link rel="stylesheet" href="./styles/main.css"/>
+
   </head>
 
   <body>
@@ -62,7 +66,7 @@
 
       <!--Hero-->
       <section class="hero d-flex justify-content-center align-items-center">
-        <div>
+        <div class="container">
           <h3>
             Hiya! I'm Agustina a multimedia designer based in Buenos Aires.
           </h3>
@@ -71,7 +75,7 @@
             <br />
             design.
           </h1>
-          <button class="arrow-btn">
+          <button class="arrow-btn ">
             <img src="./images/arrow-icon.png" alt="down" width="60px" />
           </button>
         </div>
@@ -86,8 +90,9 @@
       <!--Proyectos/cards-->
       <section id="projects" class="container ">
         <div class="row mt-5">
-          <div class="col-md-7 sm-10">
-            <div class="card h-100 d-flex flex-column justify-content-around">
+          <div class="col-md-7 sm-10 mb-sm-4 mb-md-0">
+            <div class="card h-100  d-flex flex-column justify-content-around" data-aos="fade-up"  data-aos-duration="3000" 
+            >
               <img
                 class="card-img-top"
                 src="images/portadaproject1.png"
@@ -102,8 +107,8 @@
               </div>
             </div>
           </div>
-          <div class="col-md-5 sm-10">
-            <div class="card h-100 d-flex flex-column justify-content-around">
+          <div class="col-md-5 sm-10 ">
+            <div class="card h-100 d-flex flex-column justify-content-around" data-aos="fade-up"  data-aos-duration="3000" data-aos-offset="300">
               <img
                 class="card-img-top"
                 src="./images/portadaproject2.png"
@@ -118,8 +123,8 @@
           </div>
         </div>
         <div class="row mt-4">
-          <div class="col-md-5 sm-10">
-            <div class="card h-100 d-flex flex-column justify-items-around">
+          <div class="col-md-5 sm-10 mb-sm-4 mb-md-0">
+            <div class="card h-100 d-flex flex-column" data-aos="fade-up" data-aos-duration="3000" data-aos-offset="500">
               <img
                 class="card-img-top"
                 src="./images/luke.png"
@@ -133,8 +138,7 @@
             </div>
           </div>
           <div class="col-md-7 sm-10">
-            <div class="card h-100 d-flex flex-column justify-content-around">
-              >
+            <div class="card h-100 d-flex flex-column justify-content-around" data-aos="fade-up"  data-aos-duration="3000" data-aos-offset="700">
               <img
                 class="card-img-top"
                 src="./images/mugsy.png"
@@ -156,7 +160,7 @@
           id="certificates"
           class="container row m-auto d-flex justify-content-space-around align-items-center"
         >
-          <article id="summary" class="col col-sm-12 col-md-5">
+          <article id="summary" class="col col-sm-12 col-md-5" data-aos="fade-right" data-aos-duration="1000" data-aos-offset="500">
             <h2 class="mb-4">My journey in Digital Design</h2>
             <p>
               With a background in audiovisual production and my journey in
@@ -167,7 +171,7 @@
             </p>
           </article>
           <section id="certificates" class="col col-sm-12 col-md-6">
-            <div class="row m-auto">
+            <div class="row m-auto" data-aos="fade-left" data-aos-duration="1000" data-aos-offset="700">
               <div id="courses" class="col col-sm-12 col-md-6">
                 <img src="./images/logocoder.png" alt="coderhouse" />
                 <h3>UX/UI Advd. Design</h3>
@@ -196,27 +200,19 @@
           </section>
         </div>
       </section>
-      <!--Pie-->
-      <section></section>
+      <!--bottom-->
+      <div class="bottom rounded mb-3 container"  data-aos="flip-up"
+      data-aos-anchor-placement="top-bottom" data-aos-duration="800" data-aos-offset="200">
+        <h5>Let's get to work!</h5>
+        <button class="cta m-4 wobble-hor-bottom" type="button"><a href="./pages/contact.html"><h3>Contact Me</h3></a></button>
+      </div>
     </main>
 
     <footer>
-      <!--bottom-->
-      <nav class="navbar navbar-expand-lg">
+      <nav class="navbar navbar-expand">
         <div class="container">
           <h6>@Copyright 2024</h6>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
+          <div class="navbar" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
                 <a
@@ -247,8 +243,7 @@
         </div>
       </nav>
       <a href="./pages/contact.html"
-        ><button class="float"><h3>Have any questions?</h3></button></a
-      >
+        ><button class="float rounded"><h3>Have any questions?</h3></button></a>
     </footer>
 
     <!--link bootstrap js-->
@@ -257,5 +252,10 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <!--link aos js-->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
