--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AgustinaCortesPortfolio</title>
+    <title>AgustinaCortesPortfolio - Home</title>
+    <meta name="description" content="Design Potfolio.">
+    <meta name="keywords" content="Design, Portfolio, UX, UI, Web, Multimedia, Argentina, CV">
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon" />
 
     <!--link bootstrap-->
@@ -203,8 +205,8 @@
       <!--bottom-->
       <div class="bottom rounded mb-3 container"  data-aos="flip-up"
       data-aos-anchor-placement="top-bottom" data-aos-duration="800" data-aos-offset="200">
-        <h5>Let's get to work!</h5>
-        <button class="cta m-4 wobble-hor-bottom" type="button"><a href="./pages/contact.html"><h3>Contact Me</h3></a></button>
+        <h3>Let's get to work!</h3>
+        <button class="cta m-4 wobble-hor-bottom rounded" type="button"><a href="./pages/contact.html"><h5>CONTACT ME</h5></a></button>
       </div>
     </main>
 
