--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AgustinaCortesPortfolio</title>
-    
+    <title>AgustinaCortesPortfolio - About Me</title>
+    <meta name="description" content="A little bit more to get to know me.">
     <link rel="shortcut icon" href="../images/favicon1.png" type="image/x-icon">
+    <meta name="keywords" content="Design, Portfolio, UX, UI, Web, Multimedia, Argentina, CV">
+
     <!--link bootstrap css-->
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!--link aos-->
