--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,12 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AgustinaCortesPortfolio</title>
+    <title>AgustinaCortesPortfolio - Contact</title>
+    <meta name="description" content="Send a message to contact me.">
     <link
       rel="shortcut icon"
       href="../images/favicon3.png"
       type="image/x-icon"
     />
+    <meta name="keywords" content="Design, Portfolio, UX, UI, Web, Multimedia, Argentina, CV">
+
     <!--link bootstrap css-->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"/>
