--- a/pages/project.html
+++ b/pages/project.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AgustinaCortesPortfolio</title>
-    
+    <title>AgustinaCortesPortfolio - Sunstar Cinemas Project</title>
+    <meta name="description" content="UX UI Web design project.">
     <link rel="shortcut icon" href="../images/favicon.png" type="image/x-icon" />
+    <meta name="keywords" content="Design, Portfolio, UX, UI, Web, Multimedia, Argentina, CV">
+    
     <!--link bootstrap css-->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
