--- a/pages/trinkets.html
+++ b/pages/trinkets.html
@@ -3,12 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AgustinaCortesPortfolio</title>
+    <title>AgustinaCortesPortfolio - Trinkets</title>
+    <meta name="description" content="Random design novelties and data.">
     <link
       rel="shortcut icon"
       href="../images/favicon2.png"
       type="image/x-icon"
     />
+    <meta name="keywords" content="Design, Portfolio, UX, UI, Web, Multimedia, Argentina, CV">
+
     <!--link bootstrap css-->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
