--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <meta name="description" content="Design Potfolio.">
     <meta name="keywords" content="Design, Portfolio, UX, UI, Web, Multimedia, Argentina, CV">
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon" />
+    <meta name="author" content="Agustina Cortes">
+    <meta property="og:title" content="Agustina Cortes Portfolio">
+    <meta property="og:description" content="Design portfolio">
+    <meta property="og:image" content="images/desktop.png">
+  
 
     <!--link bootstrap-->
     <link
@@ -205,8 +210,11 @@
       <!--bottom-->
       <div class="bottom rounded mb-3 container"  data-aos="flip-up"
       data-aos-anchor-placement="top-bottom" data-aos-duration="800" data-aos-offset="200">
-        <h3>Let's get to work!</h3>
-        <button class="cta m-4 wobble-hor-bottom rounded" type="button"><a href="./pages/contact.html"><h5>CONTACT ME</h5></a></button>
+       <div class="bottom-content"><h3>Let's get to work!</h3>
+        <button class="cta mt-4 wobble-hor-bottom rounded" type="button"><a href="./pages/contact.html"><h5>CONTACT ME</h5></a></button>
+       </div>
+       <div class="img container d-flex flex-row"><img src="./images/asset2.png" alt="asset">
+       <img src="./images/asset4.png" alt="asset"></div>
       </div>
     </main>
 
